[SCRUM 183] - [ANDROID]-Mechanizm logowania JWT

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="sign_in">Sign in</string>
     <string name="logo_description">PJAID Logo</string>
     <string name="toggle_password_visibility">Toggle password visibility</string>
+    <string name="wrong_login_or_password">Błędny login lub hasło</string>
 </resources>
