Poprawa dodawania ticketa zgodnie z MVVM, dodanie testu jednostkowego.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="logo_description">PJAID Logo</string>
     <string name="toggle_password_visibility">Toggle password visibility</string>
     <string name="wrong_login_or_password">Błędny login lub hasło</string>
+    <string name="ticket_title_prefix">Zgłoszenie: %1$s\n</string>
 </resources>
