--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,6 @@
     <string name="describe_error">Opisz awarię</string>
     <string name="report">Zgłoś</string>
 
-    <!-- ekran logowania -->
     <string name="welcome_to_pjaid">Welcome to PJAID</string>
     <string name="username_or_email">Username or email</string>
     <string name="password">Password</string>
@@ -28,19 +27,14 @@
     <string name="wrong_login_or_password">Błędny login lub hasło</string>
     <string name="ticket_title_prefix">Zgłoszenie: %1$s\n</string>
     <string name="logo">Logo</string>
-    <string name="rodzaj_zg_oszenia">Rodzaj zgłoszenia:</string>
-    <string name="awaria">Awaria</string>
-    <string name="przest_j">Przestój</string>
-    <string name="tytu_zg_oszenia">Tytuł zgłoszenia</string>
-    <string name="opis_zg_oszenia">Opis zgłoszenia</string>
-    <string name="wy_lij_zg_oszenie">Wyślij zgłoszenie</string>
+    <string name="ticket_type">Rodzaj zgłoszenia:</string>
+    <string name="failure">Awaria</string>
+    <string name="downtime">Przestój</string>
+    <string name="report_title">Tytuł zgłoszenia</string>
+    <string name="report_description">Opis zgłoszenia</string>
+    <string name="report_send">Wyślij zgłoszenie</string>
     <string name="back">Wstecz</string>
-    <string name="wstecz">Wstecz</string>
-    <string name="zapisz_zmiany">Zapisz zmiany</string>
-    <string-array name="tytuly_array">
-        <item>Awaria</item>
-        <item>Przestój</item>
-    </string-array>
+    <string name="save_changes">Zapisz zmiany</string>
     <string-array name="status_options">
         <item>NOWE</item>
         <item>W TRAKCIE</item>
