--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,11 +36,36 @@
     <string name="back">Wstecz</string>
     <string name="save_changes">Zapisz zmiany</string>
     <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
-    <string name="opis_zg_oszenia">Opis zgłoszenia</string>
-    <string name="technik">Technik:</string>
+    <string name="technician">Technik:</string>
     <string name="status">Status:</string>
     <string name="data">Data:</string>
-    <string name="przejd_do_szczeg_w">Przejdź do szczegółów</string>
+    <string name="go_to_details">Przejdź do szczegółów</string>
+    <string name="report_list">Lista zgłoszeń</string>
+    <string name="logout">Wyloguj się</string>
+    <string name="app_logo">App logo</string>
+    <string name="description_instruction">Opis działań</string>
+    <string name="duration_time">Czas trwania (minuty)</string>
+    <string name="final_comments">Uwagi końcowe</string>
+    <string name="save_report">Zapisz raport</string>
+    <string name="export_csv">Eksportuj jako CSV</string>
+    <string name="export_xls">Eksportuj jako XLS</string>
+    <string name="register_data">Wprowadź dane do rejestracji:</string>
+    <string name="e_mail">E-mail</string>
+    <string name="pass_word">Hasło</string>
+    <string name="confirm_password">Potwierdź hasło</string>
+    <string name="register">Zarejestruj się</string>
+    <string name="report_details">Szczegóły zgłoszenia</string>
+    <string name="reset_password">Resetuj hasło</string>
+    <string name="type_email">Wpisz swój e-mail</string>
+    <string name="reset_password_link">Wyślij link resetujący hasło</string>
+    <string name="application_logo">Logo aplikacji</string>
+    <string name="assigned_to">Assigned to:</string>
+    <string name="created">Created:</string>
+    <string name="edit">Edytuj</string>
+    <string name="delete">Usuń</string>
+    <string name="arrow">➔</string>
+    <string name="status_pending">Status: Oczekuje</string>
+    <string name="technician_lack">Technik: Brak</string>
     <string-array name="status_options">
         <item>NOWE</item>
         <item>W TRAKCIE</item>
